Bug 1275117 - Fix static strings leaks when mozlogging is on. r=jduell